Fixed: code pre overflow bug

--- a/src/style.scss
+++ b/src/style.scss
@@ -91,7 +91,7 @@ header {
 }
 
 code, pre {
-    overflow-x: scroll;
+    overflow-x: auto;
     max-width: 100%;
 }
 
